--- a/final/README.rdoc
+++ b/final/README.rdoc
@@ -1,28 +1,13 @@
-== README
+Final Project
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Antioch Goldeneye Resort
 
-Things you may want to cover:
+3 models, 6 controllers, 14 views
 
-* Ruby version
+boostrap navbar with bootstrap dropdown menus
 
-* System dependencies
+users can view reservations
 
-* Configuration
+admin can create/delete times
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+admin can set up a reservation
